created game logic

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	
   <head>
+  <link rel="stylesheet" type="text/css" href="style.css">
     <title>Memory Game</title>
   </head>
   
@@ -24,10 +25,11 @@
 		<div class="card"></div>
   	</div>
   
-  	<footer>
-  		Created with &hearts; by <span class="name">GA</span>
-	</footer>
-
+    <footer>
+  		Created with &hearts; by <span class="name">Scott Kaplan</span>
+	 </footer>
+     
+      <script src="main.js"></script>
      </body>
 
 
